<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iimas.donadatosv1_1.MainDDActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/descImg"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descImg"
                android:src="@drawable/logoaudi" />

            <LinearLayout
                android:id="@+id/boxTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#90ffffff"
                android:orientation="vertical"
                android:padding="15dp" >

                <Button
                    android:id="@+id/botonTerminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="showTermsAndConditions"
                    android:text="@string/botonAceptarTerminos"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/checkAceptarTerminos" />
            </LinearLayout>

            <Button
                android:id="@+id/botonContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/continuar"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TVTipoLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tipoLoc"
                android:textColor="#F2F2F2"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/boxTipoLocalizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#90ffffff"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp" >

                <RadioGroup
                    android:id="@+id/RGLoc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <RadioButton
                        android:id="@+id/RBGps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gps"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/RBNetwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/network"
                        android:textSize="25sp" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/BtnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/iniciarServicio"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>